security model and logic full refactor, test pass , flexicore-base-service/model pending removal